--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API=https://todo.api.devcode.gethired.id
-REACT_APP_EMAIL=blablablabla
+REACT_APP_EMAIL=n.latifahulfah@gmail.com
+GENERATE_SOURCEMAP=false
