--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API=https://todo.api.devcode.gethired.id
 REACT_APP_EMAIL=n.latifahulfah@gmail.com
-#GENERATE_SOURCEMAP=false
+GENERATE_SOURCEMAP=false
 INLINE_RUNTIME_CHUNK=false
